--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -1,6 +1,54 @@
-h1 {
-	background-color:red;
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
-p{
-	background-color: green;
+body {
+  font-size: 16px;
+  font-family: 'Oxygen', sans-serif;
+}
+#header-nav {
+  background-color: #C0C0C0;
+  border-radius: 0;
+  border: 0;
+  padding:8px;
+  border-bottom: 1px solid #000;
+}
+.menu-heading {
+	text-align: center;
+	font-family: 'Oxygen', sans-serif;
+}
+.navbar-brand h1 { /* Restaurant name */
+  color: #000;
+  text-shadow: 1px 1px 1px #222;
+  margin-top: 0;
+  margin-bottom: 0;
+  line-height: .75;
+}
+.items_single {
+background-color: #C0C0C0;
+ border: 1px solid black;
+    margin: 30px; 
+    padding-right: : 200px;
+    text-align: justify;
+    position:relative;
+    overflow:auto;
+
+ }
+p {
+	position:relative;
+}
+
+#nav-list {
+	text-align: center;
+	color:black;
+
+
+}
+
+
+
+.items_single h3 {
+	text-align: center;
+
 }
